--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <div id="puzzleSection">
             <form id="puzzleForm">
                 <p>
-We heed this old spirit,
-In a new day's <span class="blank"><input type="text" maxlength="1" name="letterA1"></span>yric,
-In our hea<span class="blank"><input type="text" maxlength="1" name="letterA2"></span>ts, we hear it:
-For auld lang syne, my dear,
-For auld lang syne.
-Be bold, sang Time this year,
-Be bold, s<span class="blank"><input type="text" maxlength="1" name="letterA3"></span>ng Time,
-For when you honor yesterday,
-<span class="blank"><input type="text" maxlength="1" name="letterA4"></span>omorrow ye will find.
-Know what we've fo<span class="blank"><input type="text" maxlength="1" name="letterA5"></span>ght
-Ne<span class="blank"><input type="text" maxlength="1" name="letterA6"></span>d not be forgot nor for none.
-It defines us, binds us as one,
-Come over, join this d<span class="blank"><input type="text" maxlength="1" name="letterA7"></span>y just begun.
-For wherever we come together,
-We will forev<span class="blank"><input type="text" maxlength="1" name="letterA8"></span>r overcome.
--Amanda Gorman “New Day’s Lyric”
+We heed this old spirit,</span><br>
+In a new day's <span class="blank"><input type="text" maxlength="1" name="letterA1"></span>yric,</span><br>
+In our hea<span class="blank"><input type="text" maxlength="1" name="letterA2"></span>ts, we hear it:</span><br>
+For auld lang syne, my dear,</span><br>
+For auld lang syne.</span><br>
+Be bold, sang Time this year,</span><br>
+Be bold, s<span class="blank"><input type="text" maxlength="1" name="letterA3"></span>ng Time,</span><br>
+For when you honor yesterday,</span><br>
+<span class="blank"><input type="text" maxlength="1" name="letterA4"></span>omorrow ye will find.</span><br>
+Know what we've fo<span class="blank"><input type="text" maxlength="1" name="letterA5"></span>ght</span><br>
+Ne<span class="blank"><input type="text" maxlength="1" name="letterA6"></span>d not be forgot nor for none.</span><br>
+It defines us, binds us as one,</span><br>
+Come over, join this d<span class="blank"><input type="text" maxlength="1" name="letterA7"></span>y just begun.</span><br>
+For wherever we come together,</span><br>
+We will forev<span class="blank"><input type="text" maxlength="1" name="letterA8"></span>r overcome.</span><br>
+-Amanda Gorman “New Day’s Lyric”</span><br>
 
                 </p>
                 
