--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ We will forev<span class="blank"><input type="text" maxlength="1" name="letterA8
                 <p>Unscramble the Phrase:</p>
                 <div id="unscrambleArea">
                     <input type="text" id="unscrambledWord1" maxlength="8" placeholder="______" name="unscrambledWord1">
-                    <input type="text"                 </div>
+                                     </div>
                 <p>Word Lengths: 8</p>
                 <p>**Lowercase letters only</p>
                 <br>
