--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <div class="container">
         <div id="introduction">
-            <h1>Welcome to the Puzzle Game</h1>
-            <p>"New Day’s Lyric" Fill-in-the-Blanks</p>
+            <h1>Speeches of a Dream</h1>
+            <p>Fill-in-the-Blanks</p>
         </div>
 
         <div id="puzzleSection">
