--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ In a new day's <span class="blank"><input type="text" maxlength="1" name="letter
 In our hea<span class="blank"><input type="text" maxlength="1" name="letterA2"></span>ts, we hear it:</span><br>
 For auld lang syne, my dear,</span><br>
 For auld lang syne.</span><br>
-Be bold, sang Time this year,</span><br>
-Be bold, s<span class="blank"><input type="text" maxlength="1" name="letterA3"></span>ng Time,</span><br>
+Be bold, sang Time this ye<span class="blank"><input type="text" maxlength="1" name="letterA3"></span>r,</span><br>
+Be bold, sang Time,</span><br>
 For when you honor yesterday,</span><br>
 <span class="blank"><input type="text" maxlength="1" name="letterA4"></span>omorrow ye will find.</span><br>
 Know what we've fo<span class="blank"><input type="text" maxlength="1" name="letterA5"></span>ght</span><br>
